tests/src/frontend/typechecking/invalid/trait_pattern_match_1.sk
trait Z {
  fun no(): void {
    this match {
    | X() -> void
    | _ -> void
    }
  }
}

class X() uses Z
